export type RootStackPramList = {
  MainTabNavigator: undefined
  Exercises: undefined
}

export type MainTabParamList = {
  Home: undefined
  Exercises: undefined
}

export type StackParamList = {
  Home: undefined
  Exercises: undefined
}
