import { ProgressCard } from '@/components/common/ProgressCard'
import { useTheme } from '@/hooks/useThemeColor'
import { useExerciseStore } from '@/stores/ExerciseStore'
import { useRouter } from 'expo-router'
import { useCallback } from 'react'
import { TouchableOpacity } from 'react-native'

export function WorkoutProgress() {
  const router = useRouter()
  const {
    cardBackground: cardBackgroundColor,
    text: textColor,
    selectedCircle: progressColor,
  } = useTheme()

  const { completedCount, exercises } = useExerciseStore()
  const totalExercises = Object.keys(exercises).length

  const progress = totalExercises > 0 ? completedCount / totalExercises : 0
  const workoutsLeft = totalExercises - completedCount
  const workoutLabel = workoutsLeft === 1 ? 'Workout' : 'Workouts'

  const handleNavigation = useCallback(() => {
    router.push('/workouts')
  }, [router])

  return (
    <TouchableOpacity onPress={handleNavigation}>
      <ProgressCard
        title="Workout Progress"
        subtitle={`${workoutsLeft} ${workoutLabel} left`}
        progress={progress}
        progressColor={progressColor}
        cardBackgroundColor={cardBackgroundColor}
        textColor={textColor}
      />
    </TouchableOpacity>
  )
}
